--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -109,10 +109,6 @@ nav.main-nav a.mainbtn {
   margin-top: 20px;
 }
 
-.left-div img {
-  max-width: 100px;
-}
-
 .right-div-content {
   float: left;
   width: 100%;
@@ -145,6 +141,52 @@ p.copyright {
   color: #bbb;
   font-size: 14px;
   line-height: 1.5;
+}
+
+/* Project page styling */
+
+.project-item {
+  display: table;
+  width: 100%;
+  float: left;
+  margin-top: 55px;
+}
+
+.project-item .img-div {
+  float: left;
+  width: 150px;
+  padding-right: 48px;
+  margin-top: 20px;
+}
+
+.project-item .img-div img {
+  max-width: 200px;
+  border-radius: 5%;
+}
+
+.project-item .text-div {
+  float: right;
+  width: 100%;
+  max-width: 350px;
+}
+
+.project-item .text-div p {
+  line-height: normal;
+}
+
+.project-item .text-div p a {
+  color: #5694f1;
+  text-decoration: none;
+}
+
+.project-item .text-div h3 {
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.project-item .text-div h3 a {
+  color: #5694f1;
+  text-decoration: none;
 }
 
 @media only screen and (max-width: 640px) {
