--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -189,41 +189,51 @@ p.copyright {
   text-decoration: none;
 }
 
-@media only screen and (max-width: 640px) {
-  nav.main-nav {
-    padding: 20px 15px 0;
+/* @media only screen and (max-width: 640px) {} */
+
+@media (max-width: 414px) {
+  .main-content {
+    max-width: 334px;
+    margin: 0 auto;
+    padding: 0 40px 20px;
   }
 
-  .left-div {
-    width: 20%;
-  }
-
-  .right-div-content {
-    width: 68%;
-  }
-}
-
-@media only screen and (max-width: 440px) {
   .left-div {
     width: 100%;
-    text-align: center;
   }
 
   .left-div img {
-    max-width: 100px;
+    margin: auto;
+    display: block;
+    max-width: 72px;
   }
 
-  .right-div-content {
-    width: 90%;
-    padding-left: 5%;
-    padding-right: 5%;
-  }
-
-  .right-div-content h3 {
+  .right-div-content h3,
+  .right-div-content p {
     text-align: center;
+    margin: 10px auto;
+    display: block;
   }
 
-  nav.main-nav a.mainbtn {
-    margin-left: 0px;
+  /* Projects page */
+
+  .project-item .img-div {
+    width: 100%;
+  }
+
+  .project-item .img-div img {
+    margin: auto;
+    display: block;
+  }
+
+  .project-item .text-div h3,
+  .project-item .text-div p {
+    text-align: center;
+    margin: 10px auto;
+    display: block;
+  }
+
+  .project-item {
+    margin-top: 20px;
   }
 }
