--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -166,8 +166,10 @@ p.copyright {
 
 .project-item .img-div img {
   max-width: 200px;
+  max-height: 100px;
   border-radius: 5%;
   position: absolute;
+  display: block;
   left: 0;
   -webkit-transition: opacity 1s ease-in-out;
   -moz-transition: opacity 1s ease-in-out;
@@ -331,3 +333,9 @@ p.copyright {
     margin-top: 20px;
   }
 }
+
+/* Blog posts page */
+
+  .post-item {
+  	
+  }
